# ida-mcp-in-vm

./: .gitignore  LICENSE  README.md  README_zh-CN.md
host-ida-pro-mcp/: .gitignore  LICENSE  README.md  pyproject.toml
host-ida-pro-mcp/scripts/: live_analyze_i64.py  live_test_vmfs.py
host-ida-pro-mcp/src/ida_pro_mcp/: __main__.py  ida_mcp.py  idalib_server.py  installer.py  installer_data.py  installer_tui.py  server.py
host-ida-pro-mcp/src/ida_pro_mcp/ida_mcp/: __init__.py  api_analysis.py  api_core.py  api_debug.py  api_python.py  api_stack.py  api_survey.py  api_types.py  compat.py
host-ida-pro-mcp/src/ida_pro_mcp/ida_mcp/tests/: __init__.py  test_api_analysis.py  test_api_analysis_internals.py  test_api_core.py  test_api_memory.py  test_api_modify.py  test_api_python.py  test_api_resources.py  test_api_stack.py  test_api_types.py  test_framework_helpers.py  test_tool_metadata.py  test_typed_fixture.py  test_utils.py
host-ida-pro-mcp/src/ida_pro_mcp/ida_mcp/zeromcp/: __init__.py  jsonrpc.py
host-ida-pro-mcp/src/ida_pro_mcp/tests/: test_vmfs.py
host-ida-pro-mcp/tests/: binary_info.py  test_server_transport.py  typed_fixture.elf
host-ida-pro-mcp/tests/tests/: test_server_transport.py  typed_fixture.c
ida-pro-mcp/: CLAUDE.md  RE_AI_TOOL_GAP_ANALYSIS.md  VMFS.md  export_offline_packages.py  ida-plugin.json  server.py  uv-package.sh  vm_tools.json
ida-pro-mcp/.github/: FUNDING.yml
ida-pro-mcp/scripts/: live_analyze_i64.py  live_test_vmfs.py
ida-pro-mcp/src/ida_pro_mcp/: test.py  (+2 more)
vm-idalib-launcher/: README.md  idalib_mcp_launcher.spec  launcher.py
(+118 files in other folders)
