[project]
name = "ida-pro-mcp"
version = "2.0.0"
description = "Vibe reversing with IDA Pro"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "mrexodia" },
    { name = "can1357" },
    { name = "IDA Pro MCP Contributors" },
]
keywords = ["ida", "mcp", "llm", "plugin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "fastmcp>=0.4.1",
    "idapro>=0.0.7",
    "tomli-w>=1.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
]

[project.urls]
Repository = "https://github.com/mrexodia/ida-pro-mcp"
Issues = "https://github.com/mrexodia/ida-pro-mcp/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ida-pro-mcp = "ida_pro_mcp.server:main"
idalib-mcp = "ida_pro_mcp.idalib_server:main"
ida-mcp-test = "ida_pro_mcp.test:main"

[tool.pyright]
include = ["src/ida_pro_mcp"]

[tool.ruff]
exclude = ["src/ida_pro_mcp/ida_mcp/zeromcp/*.py"]

[tool.coverage.run]
relative_files = true
include = ["src/ida_pro_mcp/*"]
omit = [
    "src/ida_pro_mcp/ida_mcp/tests/*",
    "src/ida_pro_mcp/ida_mcp/zeromcp/*",
]
